fix(pm): fix send_pm button text color contrast and fix normalizeI18nKey in common.js to support full EN_UTF8/TC_UTF8 language keys

--- a/template/discuzx5/common/extend_common.css
+++ b/template/discuzx5/common/extend_common.css
@@ -302,7 +302,7 @@ form[action*="ac=privacy&op="] .tfm caption h2.ptw {padding-top:0px !important}
 .dz_tbnvb .tb a {background:none;font-size:15px;border:none;padding:0}
 .dz_tbnvb .tb .a:after, .dz_tbnvb .tb .current:after {content:"";position:relative;bottom:-18px;display:flex;margin:0 auto;width:100%;height:2px;background:var(--dz-color);border-radius:var(--dz-radius-x)}
 .dz_tbnvb .tb .o {margin-right:0;margin-left:10px;font-size:12px !important}
-.dz_tbnvb .tb .o a {padding:0 10px;background:var(--dz-btnbga);font-size:12px !important;color:var(--dz-btntxt)}
+.dz_tbnvb .tb .o a {padding:0 10px;background:var(--dz-btnbga);font-size:12px !important;color:var(--dz-btntxta)}
 .dz_tbnvb .tb .kmfa_rss {margin-top:0;padding-left:20px !important;background-position:0 3px !important}
 .dz_tbnvb .tb .y {margin-right:0}
 .dz_tbnvb .tb .y:after {display:none}
